@startuml

title __PLUGINS's Class Diagram__\n

  package sud_tanj.com.icare {
    package sud_tanj.com.icare.Backend {
      package sud_tanj.com.icare.Backend.Plugins {
        abstract class BasePlugin {
            {static} - basePluginList : List<BasePlugin>
            + BasePlugin()
            {static} + init()
            # onEventListenerFired()
            + fireEventListener()
            + onDispose()
            {static} + getBasePluginList()
        }
      }
    }
  }
  

  package sud_tanj.com.icare {
    package sud_tanj.com.icare.Backend {
      package sud_tanj.com.icare.Backend.Plugins {
        interface PluginListener {
            {static} + dataSnapshot : DataSnapshot
            {abstract} + processInBackground()
        }
      }
    }
  }
  

  BasePlugin -up-|> Runnable
  BasePlugin -up-|> BaseAbstractComponent


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
